fix: fix checkbox overflow issue

--- a/inst/css/filter-panel.css
+++ b/inst/css/filter-panel.css
@@ -70,14 +70,15 @@ a.remove_all:hover {
 .teal-slice.choices-state label {
   display: flex;
   gap: 5px;
+  align-items: center;
 }
 
 .teal-slice.choices-state label > input {
-  flex-grow: 0;
+  flex: none;
 }
 
 .teal-slice.choices-state label > span {
-  flex-grow: 4;
+  flex-grow: 1;
 }
 
 .teal-slice.choices-state > div.form-group {
@@ -247,12 +248,49 @@ a.remove_all:hover {
   font-size: small;
 }
 
-.progress.state-count-container {
-  height: 1.75rem; /* Increase height, 100px */
-  width: 90%;
+.teal-slice.progress.state-count-container {
+  height: 1.75rem;
+  width: 100%;
+  height: 100%;
   background-color: white;
   margin: 0em;
   border-radius: 0px;
+}
+
+.teal-slice.progress.state-count-container > .count-bar-filtered-container {
+  position: relative;
+  background-color: var(--bs-white);
+  display: flex;
+  flex: 1;
+  align-items: center;
+  padding: 2px 0;
+}
+
+.teal-slice.progress.state-count-container
+  > .count-bar-filtered-container
+  > .progress-bar.state-count-bar-filtered {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.teal-slice.progress.state-count-container
+  > .count-bar-filtered-container
+  > .count-bar-filtered-label {
+  position: relative;
+  z-index: 1;
+  flex: 1 1 auto;
+  width: 100%;
+  text-align: left;
+  padding: 0 0.5rem;
+
+  white-space: wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  pointer-events: none;
+  color: var(--bs-body-color, #333333);
 }
 
 .progress-bar.state-count-bar-filtered {
@@ -260,7 +298,7 @@ a.remove_all:hover {
   color: var(--bs-body-color, var(--dark, #333333));
   overflow: visible;
   text-align: left;
-  white-space: wrap; /* Change to wrap */
+  white-space: normal;
   font-size: small;
 }
 
